samples/_failures_safe/1761405074_820ca8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dadc296a.c: In function ‘main’:
./samples/SAFE/__tmp_dadc296a.c:144:9: error: expected identifier or ‘(’ at end of input
  144 |         for (int
      |         ^~~
./samples/SAFE/__tmp_dadc296a.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dadc296a.c:144:9: error: expected declaration or statement at end of input
